# SmartRoute-AI

./: KURULUM.md  LICENSE  README.md
backend/: app.py  data_loader.py  optimizer.py  report_generator.py  requirements.txt
frontend/: app.js  index.html  style.css
outputs/: association_rules.csv
src/: n8n_warehouse_workflow.json  pyproject.toml  start.bat
