[project]
name = "warehouse-optimization"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.102.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-genai>=2.2.0",
    "matplotlib>=3.10.9",
    "mlxtend>=0.23.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "reportlab>=4.5.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]